--- a/projetos.html
+++ b/projetos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projetos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -21,13 +21,16 @@
     </header>
     <div class="conteudo">
       <h2>Projetos</h2>
-      <a href="https://github.com/lucas0498/robotron-2000.git">Acesse o projeto aqui.</a> <br>
-      <img src="projeto.png" alt="" width="500" height="300">
+      <p>Aqui está um dos meus projetos recentes:</p>
+      <a href="https://github.com/lucas0498/robotron-2000.git" class="projeto-link">Acesse o projeto aqui.</a> <br>
+      <img src="img/projeto.png" alt="" width="500" height="300">
     </div>
     <footer>
-            <a href="https://github.com/lucas0498"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+      <ul class="social-icons">
+        <li><a href="https://github.com/lucas0498"><i class="fa fa-github"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+      </ul>
     </footer>   
     </body>
     </html>
