--- a/projetos.html
+++ b/projetos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projetos</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -17,13 +17,13 @@
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
-      <img src="img/perfil.jpeg" alt="#" id="foto-cabecalho">
+      <img src="perfil.jpeg" alt="#" id="foto-cabecalho">
     </header>
     <div class="conteudo">
       <h2>Projetos</h2>
       <p>Aqui está um dos meus projetos recentes:</p>
       <a href="https://github.com/lucas0498/robotron-2000.git" class="projeto-link">Acesse o projeto aqui.</a> <br>
-      <img src="img/projeto.png" alt="" width="500" height="300">
+      <img src="projeto.png" alt="" width="500" height="300">
     </div>
     <footer>
       <ul class="social-icons">
