--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   </div>
   
   <footer>
-        <ul class="social-icons">
-          <li><a href="https://github.com/lucas0498"><i class="fa fa-github"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        </ul>
-      </footer>
+    <ul class="social-icons">
+      <li><a href="https://github.com/lucas0498"><i class="fa fa-github"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/lucas-gon%C3%A7alves-447690192"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://www.instagram.com/_caslugoncalves/"><i class="fa fa-instagram"></i></a></li>
+    </ul>
+  </footer>   
       
 </body>
 </html>
