--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Lucas Gonçalves</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <style>
     /* Estilos adicionais para a imagem */
   
@@ -21,17 +22,20 @@
             <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
-    <h1><img src="perfil.jpeg" alt="#" id="foto-cabecalho"></h1>
+    <h1><img src="perfil.jpeg" id="foto-cabecalho"></h1>
   </header>
   <div class="conteudo">
-    <h2>Lucas Gonçalves</h2>
+    <h2 id="titulo-nome">Lucas Gonçalves</h2>
     <h3>Desenvolvedor Front-end</h3>
     <h4>Sobre mim</h4>
     <p>
-        Olá, meu nome é Lucas e tenho 25 anos. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas e tenho um grande interesse pelo mundo da tecnologia. Desde criança, sempre fui fascinado por computadores e tudo o que envolve programação.
-        Ao longo dos anos, fui aprimorando meus conhecimentos e hoje tenho habilidades em diversas linguagens, como HTML, CSS, Javascript e Java. Essas habilidades me permitem desenvolver sites e aplicativos que são visualmente atraentes e funcionais.
-        Além disso, adoro desafios e sou muito dedicado quando se trata de aprender algo novo. Estou sempre buscando novas formas de aprimorar meus conhecimentos e colocá-los em prática em projetos pessoais e profissionais. 
-        No futuro, espero poder trabalhar em uma empresa de tecnologia renomada e contribuir para o desenvolvimento de soluções inovadoras que possam ajudar as pessoas em seu dia a dia. Acredito que a tecnologia tem o poder de mudar o mundo e estou animado para fazer parte dessa transformação.
+          Olá, meu nome é Lucas e tenho 25 anos. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas e tenho um grande interesse pelo mundo da tecnologia. <br>
+          Ao longo dos anos, fui aprimorando meus conhecimentos e hoje tenho habilidades em diversas linguagens, como HTML, CSS, Javascript e Java. Essas habilidades me <br>
+        permitem desenvolver sites e aplicativos que são visualmente atraentes e funcionais. <br>
+          Além disso, adoro desafios e sou muito dedicado quando se trata de aprender algo novo. Estou sempre buscando novas formas de aprimorar meus conhecimentos e colocá-los <br>
+        em prática em projetos pessoais e profissionais. <br>
+          No futuro, espero poder trabalhar em uma empresa de tecnologia renomada e contribuir para o desenvolvimento de soluções inovadoras que possam ajudar as pessoas em seu <br>
+        dia a dia. Acredito que a tecnologia tem o poder de mudar o mundo e estou animado para fazer parte dessa transformação.
         </p>
     <h4>Formação</h4>
     <p>Cursando Analise e Desenvolvimento de Sistemas</p>
