--- a/projetos.html
+++ b/projetos.html
@@ -20,17 +20,17 @@
       <img src="perfil.jpeg" alt="#" id="foto-cabecalho">
     </header>
     <div class="conteudo">
-      <h2>Projetos</h2>
+      <h2 id="titulo-projetos">Projetos</h2>
       <p>Aqui está um dos meus projetos recentes:</p>
       <a href="https://github.com/lucas0498/robotron-2000.git" class="projeto-link">Acesse o projeto aqui.</a> <br>
       <img src="projeto.png" alt="" width="500" height="300">
     </div>
-  <footer>
-    <ul class="social-icons">
-      <li><a href="https://github.com/lucas0498"><i class="fa fa-github"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/lucas-gon%C3%A7alves-447690192"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="https://www.instagram.com/_caslugoncalves/"><i class="fa fa-instagram"></i></a></li>
-    </ul>
-  </footer>     
+    <footer>
+      <ul class="social-icons">
+        <li><a href="https://github.com/lucas0498"><i class="fa fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/lucas-gon%C3%A7alves-447690192"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://www.instagram.com/_caslugoncalves/"><i class="fa fa-instagram"></i></a></li>
+      </ul>
+    </footer>   
     </body>
     </html>
