--- a/projetos.html
+++ b/projetos.html
@@ -23,7 +23,7 @@
       <h2 id="titulo-projetos">Projetos</h2>
       <p>Aqui está um dos meus projetos recentes:</p>
       <a href="https://github.com/lucas0498/robotron-2000.git" class="projeto-link">Acesse o projeto aqui.</a> <br>
-      <img src="projeto.png" alt="" width="500" height="300">
+      <img src="projeto.png" alt="" class="foto-projeto">
     </div>
     <footer>
       <ul class="social-icons">
