mudando a paleta de cores do projeto index.html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <h4>Sobre mim</h4>
     <p>
           Olá, meu nome é Lucas e tenho 25 anos. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas e tenho um grande interesse pelo mundo da tecnologia. <br>
-          Ao longo dos anos, fui aprimorando meus conhecimentos e hoje tenho habilidades em diversas linguagens, como HTML, CSS, Javascript e Java. Essas habilidades me <br>
-        permitem desenvolver sites e aplicativos que são visualmente atraentes e funcionais. <br>
+          Tenho conhecimentos em HTML, CSS, Javascript e Java. Essas habilidades me permitem desenvolver sites e aplicativos que são visualmente atraentes e funcionais. <br>
           Além disso, adoro desafios e sou muito dedicado quando se trata de aprender algo novo. Estou sempre buscando novas formas de aprimorar meus conhecimentos e colocá-los <br>
         em prática em projetos pessoais e profissionais. <br>
           No futuro, espero poder trabalhar em uma empresa de tecnologia renomada e contribuir para o desenvolvimento de soluções inovadoras que possam ajudar as pessoas em seu <br>
