--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2 id="titulo-nome">Lucas Gonçalves</h2>
     <h3>Desenvolvedor Front-end</h3>
     <h4>Sobre mim</h4>
-    <p>
+    <p class="p-principal">
           Olá, meu nome é Lucas e tenho 25 anos. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas e tenho um grande interesse pelo mundo da tecnologia. <br>
           Tenho conhecimentos em HTML, CSS, Javascript e Java. Essas habilidades me permitem desenvolver sites e aplicativos que são visualmente atraentes e funcionais. <br>
           Além disso, adoro desafios e sou muito dedicado quando se trata de aprender algo novo. Estou sempre buscando novas formas de aprimorar meus conhecimentos e colocá-los <br>
@@ -37,9 +37,9 @@
         dia a dia. Acredito que a tecnologia tem o poder de mudar o mundo e estou animado para fazer parte dessa transformação.
         </p>
     <h4>Formação</h4>
-    <p>Cursando Analise e Desenvolvimento de Sistemas</p>
+    <p class="p-principal">Cursando Analise e Desenvolvimento de Sistemas</p>
     <h4>Cursos</h4>
-    <p>
+    <p class="p-principal">
         <ul>
             <li>Formação Iniciante em Programação - Alura</li>
             <li>HTML e CSS - Alura</li>
