--- a/contato.html
+++ b/contato.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Contato</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="contato.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/contato.css">
   
 </head>
 <body>
@@ -19,10 +19,10 @@
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
-    <h1><img src="perfil.jpeg" alt="#" id="foto-cabecalho"></h1>
+    <h1><img src="img/perfil.jpeg" alt="#" id="foto-cabecalho"></h1>
   </header>
   <div class="conteudo">
-    <h2>Contato</h2>
+    <h2 id="titulo-contato">Contato</h2>
     <form action="#" method="post">
       <div class="campo">
         <label for="email">Seu e-mail:</label> <br>
