--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lucas Gonçalves</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style>
@@ -22,7 +22,7 @@
             <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
-    <h1><img src="perfil.jpeg" id="foto-cabecalho"></h1>
+    <h1><img src="img/perfil.jpeg" id="foto-cabecalho"></h1>
   </header>
   <div class="conteudo">
     <h2 id="titulo-nome">Lucas Gonçalves</h2>
@@ -37,13 +37,20 @@
         dia a dia. Acredito que a tecnologia tem o poder de mudar o mundo e estou animado para fazer parte dessa transformação.
         </p>
     <h4>Formação</h4>
-    <p class="p-principal">Cursando Analise e Desenvolvimento de Sistemas</p>
+    <p class="p-principal">Analise e Desenvolvimento de Sistemas - Universidade Cruzeiro do Sul</p>
+    <p class="p-info">Conclusão prevista para: 06/2024</p>
     <h4>Cursos</h4>
     <p class="p-principal">
         <ul>
-            <li>Formação Iniciante em Programação - Alura</li>
-            <li>HTML e CSS - Alura</li>
-            <li>Javascript - Alura</li>
+            <li>Introdução ao Javascript - Fundação Bradesco (2020)</li>
+            <li>HTML Avançado - Fundação Bradesco (2019)</li>
+            <li>Arquitetura de Computadores - Alura</li>
+            <li>Git e Github - Alura</li>
+            <li>HTML e CSS pt 1 a 4 - Alura</li>
+            <li>Javascript para Web - Alura</li>
+            <li>Javascript: Manipulando a DOM - Alura</li>
+            <li>Linux I - Alura</li>
+            <li>Logica de Programação - Alura </li>
         </ul>
     </p>
   </div>
