--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lucas Gonçalves</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style>
@@ -22,7 +22,7 @@
             <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
-    <h1><img src="img/perfil.jpeg" id="foto-cabecalho"></h1>
+    <h1><img src="perfil.jpeg" id="foto-cabecalho"></h1>
   </header>
   <div class="conteudo">
     <h2 id="titulo-nome">Lucas Gonçalves</h2>
