Atualizando infos pessoais e skills index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
   </header>
   <div class="conteudo">
     <h2 id="titulo-nome">Lucas Gonçalves</h2>
-    <h3>Desenvolvedor Front-end</h3>
+    <p class="p-info">Cotia-SP</p>
+    <p class="p-info">lucass.goncalves@outlook.com</p>
+    <p class="p-info">(11) 97551-7774</p>
+    <h3>Desenvolvedor Jr</h3> 
+    <p class="p-info">
+      <ul>
+        <li class="lista-skills">Java</li>
+        <li class="lista-skills">Javascript</li>
+        <li class="lista-skills">HTML</li>
+        <li class="lista-skills">CSS</li>
+      </ul>
+    </p>    
     <h4>Sobre mim</h4>
     <p class="p-principal">
           Olá, meu nome é Lucas e tenho 25 anos. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas e tenho um grande interesse pelo mundo da tecnologia. <br>
