--- a/projetos.html
+++ b/projetos.html
@@ -21,9 +21,7 @@
     </header>
     <div class="conteudo">
       <h2 id="titulo-projetos">Projetos</h2>
-      <p>Aqui está um dos meus projetos recentes:</p>
-      <a href="https://github.com/lucas0498/robotron-2000.git" class="projeto-link">Acesse o projeto aqui.</a> <br>
-      <img src="projeto.png" alt="" class="foto-projeto">
+      <iframe src="https://curso-alura-two.vercel.app" height="500px" width="500px" frameborder="0"></iframe>
     </div>
     <footer>
       <ul class="social-icons">
